# GoldwingCampaign

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/Include/: Actor.hpp  AssetManager.hpp  Controls.hpp  Game.hpp  Player.hpp
src/Source/: AssetManager.cpp  Controls.cpp  Game.cpp  Player.cpp
